--- a/.github/workflows/github-actions-to-docker-hub.yml
+++ b/.github/workflows/github-actions-to-docker-hub.yml
@@ -16,10 +16,11 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
-          java-version: '21'
+            java-version: '21'  # 使用JDK 21
+            distribution: 'adopt'  # 设置分发版本
 
-      - name: Build with Maven
-        run: mvn clean package
+      - name: Build with Gradle
+        run: ./gradlew build  # 使用Gradle构建项目
 
       - name: Build Docker Image
         run: |
