test for docker push

--- a/.github/workflows/github-actions-to-docker-hub.yml
+++ b/.github/workflows/github-actions-to-docker-hub.yml
@@ -20,7 +20,9 @@ jobs:
             distribution: 'adopt'  # 设置分发版本
 
       - name: Build with Gradle
-        run: ./gradlew build  # 使用Gradle构建项目
+        run: |
+          ./gradlew build
+          ls -la build/libs
 
       - name: Build Docker Image
         run: |
