--- a/.github/workflows/github-actions-to-docker-hub.yml
+++ b/.github/workflows/github-actions-to-docker-hub.yml
@@ -28,6 +28,10 @@ jobs:
         run: |
           docker build -t xjl90/test_github_g:latest .  
 
+      - name: Output Docker Username
+        run: |
+          echo "The Docker username is: ${{ secrets.DOCKER_USERNAME }}"
+
       - name: Log in to Docker Hub
         uses: docker/login-action@v1
         with:
